--- a/HMM.ipynb
+++ b/HMM.ipynb
@@ -7,7 +7,7 @@
     "## Hidden Markov Model\n",
     "In this section of our project we are trying to estimate the number of animal of a certain specie basing ourselves on observations of this specie. We are specifically focusing on deer but if the method reveals to be efficient, we can generalize our results to any specie.\n",
     "\n",
-    "It is important to note that by looking at counts from different years, we found that there are more data points as years go on. We have theorized that this may be due to scientists using the gbif website to record more as they may have found this site to be more useful. "
+    "It is important to note that by looking at counts from different years, we found that there are more data points as years go on. We have theorized that this may be due to scientists using the gbif website to record more as they may have found this site to be more useful, and also due to the fact that it has become much more easier in the past ten years to record data that it was in the nineties."
    ]
   },
   {
@@ -203,7 +203,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 371,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.86614173,  0.54165592,  0.24145424,  0.30242192,  0.73857166,\n",
+       "        0.29956505,  0.25768841,  0.78492368,  1.08499096,  0.32609195,\n",
+       "        0.38368247,  0.37480399,  1.55751722,  0.60755172,  0.33047736,\n",
+       "        1.16750559,  1.37892555,  0.90177134,  2.17391304,  2.39393939,\n",
+       "        2.46692275,  6.0166205 ,  7.25226056,  8.64110887])"
+      ]
+     },
+     "execution_count": 371,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "deer_obs=[198.,168.,70.,119.,227.,104.,61.,217.,264.,71.,87.,98.,337.,121.,54.,167.,173.,84.,251.,237.,289.,543.,786.,\\\n",
+    "          985.]\n",
+    "mammal_obs=[22860,31016,28991,39349,30735, 34717,23672,27646,24332,21773,22675,26147,21637,19916,16340,14304,12546,\\\n",
+    "           9315,11546,9900,11715,9025,10838,11399]\n",
+    "\n",
+    "# What percentages are the deer observations out of all mammals\n",
+    "percentage=np.divide(deer_obs,mammal_obs)*100\n",
+    "percentage\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As the number of deer observations increases in the past few years (since 2005, although the actual number of deer is decreasing) we normalize the data counts using the average number of mammals observation over the years.\n",
+    "Indeed, we assume the number of observed mammal should be the same over the years and use that ratio (average observation of mammals divided by observations on that year) as a factor to normalize the observations of deer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 370,
    "metadata": {
     "collapsed": false
    },
@@ -218,21 +259,12 @@
        "        1.75129464,  2.27328717,  1.89300763,  1.79984355])"
       ]
      },
-     "execution_count": 263,
+     "execution_count": 370,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "deer_obs=[198.,168.,70.,119.,227.,104.,61.,217.,264.,71.,87.,98.,337.,121.,54.,167.,173.,84.,251.,237.,289.,543.,786.,\\\n",
-    "          985.]\n",
-    "mammal_obs=[22860,31016,28991,39349,30735, 34717,23672,27646,24332,21773,22675,26147,21637,19916,16340,14304,12546,\\\n",
-    "           9315,11546,9900,11715,9025,10838,11399]\n",
-    "\n",
-    "# What percentages are the deer observations out of all mammals\n",
-    "percentage=np.divide(deer_obs,mammal_obs)*100\n",
-    "percentage\n",
-    "\n",
     "# Normalize by the relative number of observations\n",
     "average_norm=np.divide(float(np.sum(mammal_obs))/len(mammal_obs),mammal_obs)\n",
     "average_norm"
@@ -1196,6 +1228,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see that even though the number of observations of deer increase since 2005, Viterbi algorithm manages to translate the decrease that occured in the actual values since 2000.\n",
+    "\n",
+    "Note: To explain the increase in number of deer counts, there could also be an increase in the number of deer studies. This raises the question as to whether this is reliable data. Sightings may also depend on where the scientists decided to look for these animals, as it is unlikely there are people sweeping the entirety of the US to look for deer. Much of the data probably depends on scientific study patterns and may not reflect actual deer population."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -1203,7 +1244,6 @@
    },
    "outputs": [],
    "source": [
-    "## Plot the prediction per year and compare to actual data\n",
     "# Repeat what I did in the HW as well with one more degree"
    ]
   },
@@ -1322,13 +1362,6 @@
     "kf = kf.em(measurements, n_iter=5)\n",
     "(filtered_state_means, filtered_state_covariances) = kf.filter(measurements)\n",
     "(smoothed_state_means, smoothed_state_covariances) = kf.smooth(measurements)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "There could also be an increase in the number of deer studies. This raises the question as to whether this is reliable data. Sightings may also depend on where the scientists decided to look for these animals, as it is unlikely there are people sweeping the entirety of the US to look for deer. Much of the data probably depends on scientific study patterns and may not reflect actual deer population."
    ]
   },
   {
