--- a/EM.ipynb
+++ b/EM.ipynb
@@ -41,7 +41,7 @@
     "#data = pandas.read_csv('Data/Mammalia_2014.csv', sep='\\t')\n",
     "\n",
     "# http://www.gbif.org/occurrence/search?TAXON_KEY=212&TAXON_KEY=8407975&TAXON_KEY=358&TAXON_KEY=359&COUNTRY=US&YEAR=2015#\n",
-    "# This is data for all Mammals, Reptiles, Amphibeans, and Birds for the US in the year 2015\n",
+    "# This is data for all Mammals, Reptiles, Amphibians, and Birds for the US in the year 2015\n",
     "data = pandas.read_csv('Data/US_MAAR_2015.csv', sep='\\t')"
    ]
   },
