adding link to data

--- a/Hierarchical_Bayes.ipynb
+++ b/Hierarchical_Bayes.ipynb
@@ -62,7 +62,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is all US deer data uploaded to gbif up through the year 2015.  "
+    "This is all US deer data uploaded to gbif up through the year 2015. The data can be found at this location:  \n",
+    "http://www.gbif.org/occurrence/search?TAXON_KEY=5298&COUNTRY=US&YEAR=*%2C2015"
    ]
   },
   {
